# ai-trading-system

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  advice-for-plan.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  plan.md  prometheus.yml  pyproject.toml  railway.json  report-claude.md  report-final-verified.md  report-v1.md  report-v2.md  start.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  docker-build.yml
.serena/: project.yml
.ultra/: config.json  constitution.md  feature-status.json
.ultra/archive/task-19/: proposal.md
.ultra/archive/task-20/: proposal.md
.ultra/archive/task-22/: proposal.md
.ultra/changes/task-0/: proposal.md
.ultra/changes/task-1/: proposal.md
.ultra/changes/task-10/: proposal.md
.ultra/changes/task-11/: proposal.md
.ultra/changes/task-12/: proposal.md
.ultra/changes/task-13/: proposal.md
.ultra/changes/task-14/: proposal.md
.ultra/changes/task-15/: proposal.md
.ultra/changes/task-16/: proposal.md
.ultra/changes/task-17/: proposal.md
.ultra/changes/task-18/: proposal.md
.ultra/changes/task-2/: proposal.md
.ultra/changes/task-21/: proposal.md
.ultra/changes/task-23/: proposal.md
.ultra/changes/task-24/: proposal.md
.ultra/changes/task-25/: proposal.md
.ultra/changes/task-26/: proposal.md
.ultra/changes/task-28/: proposal.md
.ultra/changes/task-3/: proposal.md
.ultra/changes/task-4/: proposal.md
.ultra/changes/task-5/: proposal.md
.ultra/changes/task-6/: proposal.md
.ultra/changes/task-7/: proposal.md
.ultra/changes/task-8/: proposal.md
.ultra/changes/task-9/: proposal.md
.ultra/context-archive/: README.md  session-index.json
.ultra/docs/: api-frontend-alignment-report.md  architecture-gap-fixes.md  factor-mining-optimization-v2.md  feature-status.json  optimization-plan-v1.md  qlib-architecture-audit-report.md  qlib-integration-fix-plan.md  qlib-remediation-plan.md
.ultra/docs/decisions/: ADR-001-tech-stack-TEMPLATE.md  ADR-002-langgraph-migration.md  ADR-003-architecture-gaps.md
.ultra/docs/research/: README.md  iqfmp-architecture-redesign-v3.md  iqfmp-atomic-optimization-plan-v4.md  iqfmp-risk-analysis-2025-12-09.md  qlib-integration-research-2025-12-10.md  rd-agent-vs-iqfmp-analysis.md  rd-agent-vs-iqfmp-deep-analysis-v2.md  research-summary-2025-12-09.md  risk-constraints-2025-12-09.md  solution-exploration-2025-12-09.md  tech-evaluation-2025-12-09.md  v2-v3-comparison-2025-12-10.md
.ultra/specs/: architecture.md  develop-plan-v4.md  iqfmp-redesign-plan.md  product.md
.ultra/specs/api-contracts/: .gitkeep
.ultra/specs/data-models/: .gitkeep
.ultra/tasks/: tasks.json
.ultra/thinking-sessions/: README.md  session-index.json
dashboard/: Dockerfile  nginx.conf  nginx.conf.template  package-lock.json  package.json  railway.json  start.sh  tsconfig.app.json
dashboard/src/: App.tsx  index.css
dashboard/src/api/: auth.ts  backtest.ts  client.ts  config.ts  data.ts  factors.ts  index.ts  pipeline.ts  prompts.ts  research.ts  review.ts  rl.ts  strategies.ts  system.ts  trading.ts
dashboard/src/components/: ProtectedRoute.tsx
dashboard/src/data/: strategyTemplates.ts
dashboard/src/hooks/: useAgentStatus.ts  useBacktest.ts  useConfig.ts  useData.ts  useFactors.ts  useLiveTrading.ts  useMining.ts  useMonitoring.ts  usePipeline.ts  usePrompts.ts  useRLTraining.ts  useResearchLedger.ts  useReviewQueue.ts
dashboard/src/layouts/: DashboardLayout.tsx
dashboard/src/pages/: AgentMonitorPage.tsx  BacktestCenterPage.tsx  CheckpointPage.tsx  DashboardPage.tsx  DataCenterPage.tsx  FactorExplorerPage.tsx  FactorMiningPage.tsx  FactorsPage.tsx  LiveTradingPage.tsx  LoginPage.tsx  MonitoringPage.tsx  PipelinePage.tsx  PromptsPage.tsx  RLTrainingPage.tsx  ResearchLedgerPage.tsx  ReviewQueuePage.tsx  SettingsPage.tsx  StrategyWorkshopPage.tsx
dashboard/src/store/: useAppStore.ts
dashboard/src/types/: agent.ts  factor.ts  research.ts  trading.ts
data/qlib_data/calendars/: day.txt
data/qlib_data/instruments/: all.txt
data/qlib_data_verify/calendars/: day.txt
data/qlib_data_verify/instruments/: all.txt
docs/: disaster-recovery-runbook.md  kpi.md
docs/audit/: baseline_audit_2025-12-21.md
mlruns/0/: meta.yaml
mlruns/576493356213322160/: meta.yaml
mlruns/576493356213322160/164de8f83cd14f40b956229b395efcb0/: meta.yaml
mlruns/576493356213322160/5d9e8d610408408483c2ed44a3407e4b/: meta.yaml
mlruns/576493356213322160/875dd5ddf4a14d3980612c246622c945/: meta.yaml
mlruns/576493356213322160/f4c79ad4ff364e48b181c9d78e42e96a/: meta.yaml
scripts/: db_migrate_pipeline_runs.sql  db_migrate_research_trials.sql  download_sample_data.py  full_pipeline_test.py  ingest_ohlcv.py  init-db.sql  init_db.py  init_qdrant.py  register_crypto_provider.py  start_dev.sh  stop_dev.sh  sync_db_to_qlib.py  verify_qlib_data.py
scripts/audit/: run_local_audit.sh
scripts/backup/: redis_backup.sh  timescaledb_backup.sh
scripts/restore/: redis_restore.sh  timescaledb_restore.sh
src/iqfmp/: __init__.py
src/iqfmp/agents/: __init__.py  backtest_agent.py  evaluation_agent.py  factor_generation.py  field_capability.py  (+8 more)
tests/: __init__.py  benchmark_alpha158.py  conftest.py
tests/e2e/: test_agent_evolution_loop.py  test_crypto_agent_flow.py  test_ml_signal_effectiveness.py
tests/fixtures/: real_data_fixtures.py
tests/integration/: __init__.py  conftest.py  test_end_to_end.py  test_factor_evaluation.py  test_factor_generation.py  test_fixed_pipeline.py  test_pipeline_smoke.py  test_strategy_backtest.py
tests/unit/: test_project_structure.py
(+302 files in other folders)
