[project]
name = "iqfmp"
version = "0.1.0"
description = "IQFMP - Intelligent Quantitative Factor Mining Platform"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "IQFMP Team" }
]
keywords = ["quantitative", "factor", "trading", "ai", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    # Core Framework
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",

    # Database
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "qdrant-client>=1.8.0",

    # LLM & Agent
    "langchain>=0.2.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-postgres>=1.0.0",  # Official PostgreSQL checkpointer
    "openai>=1.12.0",

    # Quant
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",

    # ML (Signal Generation)
    "lightgbm>=4.0.0",
    "optuna>=3.5.0",  # For hyperparameter optimization

    # Trading
    "ccxt>=4.2.0",

    # Security
    "restrictedpython>=7.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",

    # Utilities
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.27.0",

    # Code Quality
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",

    # Type Stubs
    "types-redis>=4.6.0",
    "pandas-stubs>=2.1.0",
]

qlib = [
    "pyqlib>=0.9.0",
    # Qlib backtest required dependencies
    "gym>=0.26.0",           # Required for Qlib RL/backtest modules
    "cvxpy>=1.4.0",          # Required for portfolio optimization
]

[project.scripts]
iqfmp = "iqfmp.api.main:main"

[project.urls]
Homepage = "https://github.com/iqfmp/trading-system-v3"
Documentation = "https://github.com/iqfmp/trading-system-v3#readme"
Repository = "https://github.com/iqfmp/trading-system-v3.git"

[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/iqfmp", "vendor/qlib/qlib"]

[tool.hatch.build.targets.sdist]
include = [
    "src/iqfmp",
    "vendor/qlib/qlib",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["src", "vendor/qlib"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--cov=src/iqfmp",
    "--cov-report=term-missing",
    "--cov-report=html:coverage_html",
    "--cov-fail-under=80",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow running tests",
]

[tool.coverage.run]
source = [
    "src/iqfmp/api",
    "src/iqfmp/models",
    "src/iqfmp/agents",
    "src/iqfmp/evaluation",
    "src/iqfmp/core",
    "src/iqfmp/exchange",
    "src/iqfmp/strategy",
    "src/iqfmp/data",       # P0-3: Add data module for coverage
    "src/iqfmp/db",         # P0-3: Add db module for coverage
    "src/iqfmp/llm",        # P0-3: Add llm module for coverage
]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
    # Exclude non-core modules from coverage requirements
    "*/src/iqfmp/celery_app/*",   # Celery tasks (async worker)
    "*/src/iqfmp/monitoring/*",   # Monitoring infrastructure
    "*/src/iqfmp/rl/*",           # RL module (experimental)
    "*/src/iqfmp/ml/*",           # ML optimizer (experimental)
    "*/src/iqfmp/vector/*",       # Vector store (optional)
    # Exclude API infrastructure (tested via integration)
    "*/src/iqfmp/api/**/router.py",
    "*/src/iqfmp/api/**/service.py",
    "*/src/iqfmp/api/auth/dependencies.py",
    "*/src/iqfmp/api/auth/password.py",
    "*/src/iqfmp/api/auth/token.py",
    "*/src/iqfmp/api/main.py",
    "*/src/iqfmp/api/system/websocket.py",
    "*/src/iqfmp/models/factor_combiner.py",
    "*/src/iqfmp/models/research.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests", "vendor/qlib"]
exclude = ["vendor/qlib/qlib/**", "!vendor/qlib/qlib/contrib/crypto/**"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise without from inside except
]

[tool.ruff.lint.isort]
known-first-party = ["iqfmp"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
